# rubik

./: Cargo.toml  README.MD
examples/: repl.rs
examples/tui/: command.rs  main.rs
src/: colored.rs  cube.rs  lib.rs  main.rs  operation.rs  parser.rs  permutation.rs  prelude.rs  transform.rs
src/parser/: singmaster.rs
src/solver/: ida_star.rs  mod.rs  sa.rs  shuffle.rs  thistlethwaite.rs
src/transform/: collection.rs  layer.rs  ptr.rs  repeat.rs
tests/: print_rubik.rs  test_compiler.rs  test_compose.rs  test_cube.rs  test_parser.rs  test_rubik.rs  test_solver.rs
