[package]
name = "rubik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
singmaster = ["dep:nom"]

[dependencies]
nom = { version = "7", optional = true }
rand = "0.8.5"

[dev-dependencies]
colored = "2"
crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tui-input = "*"

[[test]]
name = "test_parser"
features = ["singmaster"]

[[example]]
name = "repl"
features = ["singmaster"]
